# bite-map

./: .env.example  .gitignore  .pre-commit-config.yaml  API_TEST_FIXING.md  API_TEST_FIX_PLAN.md  Dockerfile.test  HYBRID_TESTING_IMPLEMENTATION.md  Makefile  README.md  TEST_ANALYSIS.md  TEST_REVIEW.md  TEST_STRATEGY.md  check_test_status.py  cleanup_tests.sh  docker-compose.test.yml  docker-compose.yml  ingest_test.py  install_and_run_tests.sh  migrate_tests.sh  pyproject.toml  run_full_tests.sh  run_tests.py  setup_and_test.sh  test-recommendation.txt  test-requirements.txt  test_container_simple.py  test_patches.md  test_places_simple.py  test_report.md  update_tests.sh  worker.py
.github/workflows/: ci.yml  test.yml
app/: Dockerfile.dev  alembic.ini  database.py  database.py.patch  main.py  models.py  models.py.patch  requirements.txt  worker.py
app/alembic/: env.py
app/api/: router.py
app/core/: auth.py
app/extractors/: base.py  youtube.py
app/schemas/: auth.py  place.py
app/tests/: conftest.py  test_worker.py
app/utils/: __init__.py  geocoder.py  place_utils.py
tests/: conftest.py  conftest.py.bak  conftest.py.new  conftest_new.py  conftest_old.py  db_connection.py  db_fixtures.py  factories.py  import_helper.py  test_db.py  test_place_detail.py  test_places_postgresql.py  test_worker.py  test_worker.py.bak
tests/api/: test_auth.py  test_auth.py.bak  test_auth.py.new  test_auth.py.old  test_auth_fixed.py  test_auth_improved.py  test_ingest.py  test_ingest.py.bak  test_places.py  (+1 more)
web/: index.html  package-lock.json  package.json  vite.config.ts
(+33 files in other folders)
